clang-ir/tests/snapshots/snapshot_fixtures__fixtures__struct_with_array.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/struct_with_array.c" (c, x86_64-unknown-linux-gnu)
global __const.main.init : rec_Buf = ConstRecord { ty: Named("rec_Buf"), members: Array([ConstArray { ty: Array { element_type: Named("s32i"), size: 3 }, elts: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "2" }, CirInt { ty: Named("s32i"), value: "3" }]), trailing_zeros_num: 0 }, CirInt { ty: Named("s32i"), value: "3" }]) } [cir_private, default, dso_local, constant]
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_Buf, "b", align 4
        %2 = alloca rec_Buf, "init", align 4
        %3 = alloca s32i, "sum", align 4
        %4 = const 0 : s32i
        store %4, %0
        %5 = const 10 : s32i
        %6 = const 0 : s64i
        get_member
        get_element
        store %5, %8, align 4
        %9 = const 20 : s32i
        %10 = const 1 : s64i
        get_member
        get_element
        store %9, %12, align 4
        %13 = const 30 : s32i
        %14 = const 2 : s64i
        get_member
        get_element
        store %13, %16, align 4
        %17 = const 3 : s32i
        get_member
        store %17, %18, align 4
        %19 = get_global @printf : (s8i*, ...) -> s32i*
        %20 = get_global @.str : s8i[4]*
        %21 = cast(array_to_ptrdecay) %20 : s8i*
        %22 = const 1 : s64i
        get_member
        get_element
        %25 = load %24 : s32i, align 4
        get_member
        %27 = load %26 : s32i, align 4
        %28 = add %25, %27 : s32i [nsw]
        %29 = call @printf(%21, %28) : s32i [all]
        %30 = get_global @__const.main.init : rec_Buf*
        copy
        %31 = const 0 : s32i
        store %31, %3, align 4
        scope {
                %39 = alloca s32i, "i", align 4
                %40 = const 0 : s32i
                store %40, %39, align 4
                for cond {
                        %50 = load %39 : s32i, align 4
                        get_member
                        %52 = load %51 : s32i, align 4
                        cmp
                        condition %53
                } step {
                        %41 = load %39 : s32i, align 4
                        inc
                        store %42, %39, align 4
                        yield
                } body {
                        scope {
                                %43 = load %39 : s32i, align 4
                                %44 = cast(integral) %43 : s64i
                                get_member
                                get_element
                                %47 = load %46 : s32i, align 4
                                %48 = load %3 : s32i, align 4
                                %49 = add %48, %47 : s32i [nsw]
                                store %49, %3, align 4
                                yield
                        }
                        yield
                }
                yield
        }
        %32 = get_global @printf : (s8i*, ...) -> s32i*
        %33 = get_global @.str : s8i[4]*
        %34 = cast(array_to_ptrdecay) %33 : s8i*
        %35 = load %3 : s32i, align 4
        %36 = call @printf(%34, %35) : s32i [all]
        %37 = const 0 : s32i
        store %37, %0
        %38 = load %0 : s32i
        return %38
}
