clang-ir/tests/snapshots/snapshot_fixtures__fixtures__sub.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/sub.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[4] = "%u\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn isub(%arg0: s32i, %arg1: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %22 = alloca s32i, "a", align 4
        %23 = alloca s32i, "b", align 4
        %24 = alloca s32i, "__retval", align 4
        store %arg0, %22
        store %arg1, %23
        %25 = load %22 : s32i, align 4
        %26 = load %23 : s32i, align 4
        %27 = sub %25, %26 : s32i [nsw]
        store %27, %24
        %28 = load %24 : s32i
        return %28
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u32i, "u", align 4
    %2 = alloca u32i, "w", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @printf : ((s8i*, ...) -> s32i)*
    %5 = get_global @.str : s8i[4]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = const 10 : s32i
    %8 = const 25 : s32i
    %9 = call @isub(%7, %8) : s32i [all]
    %10 = call @printf(%6, %9) : s32i [all]
    %11 = const 3 : u32i
    store %11, %1, align 4
    %12 = const 10 : u32i
    store %12, %2, align 4
    %13 = get_global @printf : ((s8i*, ...) -> s32i)*
    %14 = get_global @.str.1 : s8i[4]*
    %15 = cast(array_to_ptrdecay) %14 : s8i*
    %16 = load %1 : u32i, align 4
    %17 = load %2 : u32i, align 4
    %18 = sub %16, %17 : u32i
    %19 = call @printf(%15, %18) : s32i [all]
    %20 = const 0 : s32i
    store %20, %0
    %21 = load %0 : s32i
    return %21
}
