clang-ir/tests/snapshots/snapshot_fixtures__fixtures__support_module_cleanup.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/support_module_cleanup.c" (c, x86_64-unknown-linux-gnu)
global __const.main.digits : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("123"), trailing_zeros_num: 1 } [cir_private, default, dso_local, constant]
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn atoi(%arg0: s8i*) -> s32i [external, c, pure, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i[4], "digits", align 1
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @__const.main.digits : s8i[4]*
        copy
        %4 = get_global @printf : (s8i*, ...) -> s32i*
        %5 = get_global @.str : s8i[4]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = cast(array_to_ptrdecay) %1 : s8i*
        %8 = call @atoi(%7) : s32i [pure]
        %9 = call @printf(%6, %8) : s32i [all]
        %10 = const 0 : s32i
        store %10, %0
        %11 = load %0 : s32i
        return %11
}
