clang-ir/tests/snapshots/snapshot_fixtures__fixtures__swap_fixup.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/swap_fixup.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("%d %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = ConstArray { ty: Array { element_type: Named("s8i"), size: 10 }, elts: Str("%d %d %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn basic_swap() -> void [internal, c, no_inline, dso_local, nothrow] {
        %30 = alloca s32i, "a", align 4
        %31 = alloca s32i, "b", align 4
        %32 = alloca s32i, "tmp", align 4
        %33 = const 1 : s32i
        store %33, %30, align 4
        %34 = const 2 : s32i
        store %34, %31, align 4
        %35 = load %30 : s32i, align 4
        store %35, %32, align 4
        %36 = load %31 : s32i, align 4
        store %36, %30, align 4
        %37 = load %32 : s32i, align 4
        store %37, %31, align 4
        %38 = get_global @printf : (s8i*, ...) -> s32i*
        %39 = get_global @.str : s8i[7]*
        %40 = cast(array_to_ptrdecay) %39 : s8i*
        %41 = load %30 : s32i, align 4
        %42 = load %31 : s32i, align 4
        %43 = call @printf(%40, %41, %42) : s32i [all]
        return
}
fn tmp_reused() -> void [internal, c, no_inline, dso_local, nothrow] {
        %15 = alloca s32i, "a", align 4
        %16 = alloca s32i, "b", align 4
        %17 = alloca s32i, "tmp", align 4
        %18 = const 3 : s32i
        store %18, %15, align 4
        %19 = const 4 : s32i
        store %19, %16, align 4
        %20 = load %15 : s32i, align 4
        store %20, %17, align 4
        %21 = load %16 : s32i, align 4
        store %21, %15, align 4
        %22 = load %17 : s32i, align 4
        store %22, %16, align 4
        %23 = get_global @printf : (s8i*, ...) -> s32i*
        %24 = get_global @.str.1 : s8i[10]*
        %25 = cast(array_to_ptrdecay) %24 : s8i*
        %26 = load %15 : s32i, align 4
        %27 = load %16 : s32i, align 4
        %28 = load %17 : s32i, align 4
        %29 = call @printf(%25, %26, %27, %28) : s32i [all]
        return
}
fn self_swap() -> void [internal, c, no_inline, dso_local, nothrow] {
        %4 = alloca s32i, "a", align 4
        %5 = alloca s32i, "tmp", align 4
        %6 = const 5 : s32i
        store %6, %4, align 4
        %7 = load %4 : s32i, align 4
        store %7, %5, align 4
        %8 = load %4 : s32i, align 4
        store %8, %4, align 4
        %9 = load %5 : s32i, align 4
        store %9, %4, align 4
        %10 = get_global @printf : (s8i*, ...) -> s32i*
        %11 = get_global @.str.2 : s8i[4]*
        %12 = cast(array_to_ptrdecay) %11 : s8i*
        %13 = load %4 : s32i, align 4
        %14 = call @printf(%12, %13) : s32i [all]
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        call @basic_swap() [all]
        call @tmp_reused() [all]
        call @self_swap() [all]
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
