clang-ir/tests/snapshots/snapshot_fixtures__fixtures__switch_fallthrough.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/switch_fallthrough.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[16] = "%d %d %d %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn score(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %18 = alloca s32i, "x", align 4
        %19 = alloca s32i, "__retval", align 4
        %20 = alloca s32i, "out", align 4
        store %arg0, %18
        %21 = const 0 : s32i
        store %21, %20, align 4
        scope {
            %24 = load %18 : s32i, align 4
            switch %24 {
                case equal 1 {
                    %34 = const 10 : s32i
                    %35 = load %20 : s32i, align 4
                    %36 = add %35, %34 : s32i [nsw]
                    store %36, %20, align 4
                    yield
                }
                case equal 2 {
                    %31 = const 20 : s32i
                    %32 = load %20 : s32i, align 4
                    %33 = add %32, %31 : s32i [nsw]
                    store %33, %20, align 4
                    break
                }
                case equal 3 {
                    yield
                }
                case equal 4 {
                    %28 = const 40 : s32i
                    %29 = load %20 : s32i, align 4
                    %30 = add %29, %28 : s32i [nsw]
                    store %30, %20, align 4
                    break
                }
                case default {
                    %25 = const 90 : s32i
                    %26 = load %20 : s32i, align 4
                    %27 = add %26, %25 : s32i [nsw]
                    store %27, %20, align 4
                    yield
                }
            }
            yield
        }
        %22 = load %20 : s32i, align 4
        store %22, %19
        %23 = load %19 : s32i
        return %23
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[16]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = const 1 : s32i
    %6 = call @score(%5) : s32i [all]
    %7 = const 2 : s32i
    %8 = call @score(%7) : s32i [all]
    %9 = const 3 : s32i
    %10 = call @score(%9) : s32i [all]
    %11 = const 4 : s32i
    %12 = call @score(%11) : s32i [all]
    %13 = const 8 : s32i
    %14 = call @score(%13) : s32i [all]
    %15 = call @printf(%4, %6, %8, %10, %12, %14) : s32i [all]
    %16 = const 0 : s32i
    store %16, %0
    %17 = load %0 : s32i
    return %17
}
